# cutseq

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.json
.github/workflows/: docs.yaml  python-publish.yml
cutseq/: adapters.toml  common.py  run.py  run_cmd.py  test.json
docs/: CNAME  _config.yml  adapters.md  index.md  quickstart.md
scripts/: update_adapter_docs.py
test/: test_common.py
