[tool.poetry]
name = "cutseq"
version = "0.0.25"
description = "Automatically cut adapter / barcode / UMI from NGS data"
authors = ["Ye Chang <yech1990@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["bioinformatics", "NGS", "adapter", "barcode", "UMI"]
repository = "https://github.com/y9c/cutseq"


[tool.poetry.dependencies]
python = "^3.8"
cutadapt = "^4.8"

[tool.poetry.scripts]
cutseq = 'cutseq.run:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
