[project]
name = "cutseq"
version = "0.0.68"
description = "Automatically cut adapter / barcode / UMI from NGS data"
authors = [{ name = "Ye Chang", email = "yech1990@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
keywords = [
    "bioinformatics",
    "NGS",
    "adapter",
    "barcode",
    "UMI",
]
dependencies = [
    "cutadapt~=5.0",
    "tomli>=2.0.1,<3 ; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/y9c/cutseq"

[project.scripts]
cutseq = "cutseq.run:main"

[dependency-groups]
dev = ["pre-commit>=3.7.0,<4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cutseq"]
